# jailor-discord-bot

./: .gitignore  Dockerfile  Pipfile  Procfile  README.md  build-image.sh  jailor.py  requirements.txt  setup.cfg  setup.py
classes/: configuration.py
config/: settings.template
jailor-bot/: jailor.py
jailor-bot/classes/: bot.py  bot_configuration.py  bot_felony.py  configuration.py  database.py
jailor-bot/config/: settings  settings.template
jailor-bot/enums/: felony_type.py
jailor-bot/modules/: configuration.py  discord.py  functions.py  utilities.py
modules/: discord.py  functions.py  telegram.py  utilities.py
