[metadata]
name = jailor-bot
version = 1.1.0
url = https://github.com/ivozzo/jailor-discord-bot
author = ivozzo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
description = A moderation discord bot
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9